--- a/style.css
+++ b/style.css
@@ -6,8 +6,10 @@ body {
 }
 
 .container {
+  flex-basis: 50px;
   display: flex;
-  align-content: center;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 h1 {
@@ -23,6 +25,7 @@ h5 {
 
 span {
   display: block;
+  padding-bottom: 20px;
 }
 
 strong {
@@ -32,7 +35,6 @@ strong {
 }
 
 .card {
-  width: 100%;
   margin: 30px;
   text-align: center;
   background-color: rgb(24, 24, 24);
@@ -40,20 +42,20 @@ strong {
   padding-bottom: 5px;
   box-shadow: 5px 4px 8px 0 rgba(0, 0, 0, 0.527);
   display: inline-block;
+  flex-basis: 300px;
 }
 
 .ams {
-  width: 100%;
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
 }
 
 .ss {
-  width: 100%;
+  flex-basis: inherit;
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
 }
 
 img {
-  height: 80%;
+  width: 100%;
 }
